2008-02-29  J. Tang  <jtang@tresys.com>

	* Synced libqpol to libsepol version 2.0.23, policy parser to
	2.0.10.

2008-02-21  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.3.

	* Fixes to qpol_default_policy_find() to properly return policies
	whose versions are greater than the currently running system.

2008-02-19  J. Tang  <jtang@tresys.com>

	* Added QPOL_POLICY_OPTION_MATCH_SYSTEM as a policy load option to
	qpol_policy_open_from_file().  The tools seinfo, sesearch, and
	sechecker will now use this flag when loading the system's default
	policy.

	* Modified libqpol to understand version 22 policy.  Added
	QPOL_CAP_POLCAPS to qpol_capability enum.

2008-02-15  J. Tang  <jtang@tresys.com>

	* Synced libqpol to libsepol version 2.0.20.  The configure script
	will check if dynamic avtabs exist (introduced in libsepol 2.0.20)
	and will adjust policy loading as necessary.

2008-01-09  J. Tang  <jtang@tresys.com>

	* Added initial attempt at Debian-izing SETools.  The Debian
	control files are only present in the SVN checkout of SETools, not
	in the distributed tarball.

2008-01-07  J. Tang  <jtang@tresys.com>

	* Changed sechecker's compilation system to one based upon
	libtool.  Modules are now installed in $(PREFIX)/lib/setools
	instead of $(PREFIX)/share/setools.

2008-01-02  J. Tang  <jtang@tresys.com>

	* Added conditional expression simplification algorithm to
	libapol.  See apol/cond-simplify.h.

2007-12-10  J. Tang  <jtang@tresys.com>

	* Apol help files are now formatted using HTML instead of plain
	text files.

	* Renamed relabel_module.tcl to file_relabel_module.tcl.  Changed
	the name with apol from "Direct Relabel" to "File Relabel".

2007-12-06  J. Tang  <jtang@tresys.com>

	* Added Tkhtml 3.0 requirement to apol.  This is used to render
	the help files and dynamically generated reports.  If the user
	does not have Tkhtml installed, the one provided in the packages
	subdirectory will be used instead.
