@@ -1,3 +1,7 @@
+2008-03-05  J. Tang  <jtang@tresys.com>
+
+	* Synced libqpol to policy parser to 2.0.13.
+
 2008-02-29  J. Tang  <jtang@tresys.com>
 
 	* Synced libqpol to libsepol version 2.0.23, policy parser to
